--- a/src/scss/abstracts/_bootstrap-variables.scss
+++ b/src/scss/abstracts/_bootstrap-variables.scss
@@ -4,6 +4,8 @@ $body-bg:#fafafa;
 $body-color:$dark;
 $blck: #000;
 $grey-light: #a5a5a5;
+$blue: #007aff;
+$primary: $blue;
 
 // Fonts
 $font-family-sans-serif:          'SF UI Display', "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" ;
