--- a/src/scss/components/descr-section.scss
+++ b/src/scss/components/descr-section.scss
@@ -1,6 +1,18 @@
 .descr-section {
     text-align: center;
     padding: 70px 0 13px;
+    @include media('<widescreen') {
+      padding: 50px 0 10px;
+    }
+    @include media('<desktop') {
+      padding: 40px 0 10px;
+    }
+    @include media('<tablet') {
+      padding: 30px 0 10px;
+    }
+    @include media('<phone') {
+      padding: 20px 0 5px;
+    }
     .h1 {
         font-size: 76px;
         margin-bottom: 32px;
