--- a/src/scss/components/prefooter.scss
+++ b/src/scss/components/prefooter.scss
@@ -54,7 +54,7 @@
         }
         @include media('<phone') {
           margin-bottom: 30px;
-          font-size: 16px;
+          font-size: 17px;
         }
     }
     .btn-row {
@@ -96,12 +96,13 @@
         }
         @include media('<desktop') {
           font-size: 20px;
+          margin: 30px 20px;
         }
         @include media('<tablet') {
           font-size: 18px;
         }
         @include media('<phone') {
-          font-size: 15px;
+          font-size: 17px;
         }
         strong {
             color: $black;
